# advent-of-code-2022

./: .gitignore  CMakeLists.txt  create-project.sh  get-input.sh
day-01/: CMakeLists.txt  main.cpp
day-02/: CMakeLists.txt  main.cpp
day-03/: CMakeLists.txt  main.cpp  main_part_2_golf.cpp
day-04/: CMakeLists.txt  main.cpp
day-05/: CMakeLists.txt  main.cpp
day-06/: CMakeLists.txt  main.cpp
day-07/: CMakeLists.txt  main.cpp
day-08/: CMakeLists.txt  main.cpp
day-09/: CMakeLists.txt  main.cpp
day-10/: CMakeLists.txt  main.cpp  main_golf.cpp  main_part_1_golf.cpp
day-11/: CMakeLists.txt  main.cpp
day-12/: CMakeLists.txt  main.cpp
day-13/: CMakeLists.txt  main.cpp
day-14/: CMakeLists.txt  main.cpp
day-15/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  main.cpp
